2011-10-25  Oliver Hunt  <oliver@apple.com>

        Need to support marking of multiple nested codeblocks when compiling
        https://bugs.webkit.org/show_bug.cgi?id=70832

        Reviewed by Gavin Barraclough.

        When inlining a function we end up with multiple codeblocks being
        compiled at the same time, so we need to support a list of live
        codeblocks.

        * heap/Heap.cpp:
        (JSC::Heap::markRoots):
        * runtime/JSGlobalData.cpp:
        (JSC::JSGlobalData::JSGlobalData):
        * runtime/JSGlobalData.h:
        (JSC::JSGlobalData::startedCompiling):
        (JSC::JSGlobalData::finishedCompiling):

2011-10-24  Yuqiang Xian  <yuqiang.xian@intel.com>

        DFG JIT 32_64 - fillInteger should accept DataFormatJSInteger
        https://bugs.webkit.org/show_bug.cgi?id=70798

        Reviewed by Filip Pizlo.

        When filling an integer for a known integer node (not speculated), it
        should accept DataFormatJSInteger as well.

        * dfg/DFGJITCodeGenerator32_64.cpp:
        (JSC::DFG::JITCodeGenerator::fillInteger):

2011-10-24  Geoffrey Garen  <ggaren@apple.com>

        Build fix: removed some cases of threadsafeCopy() that I missed in
        my previous patch.

        * JavaScriptCore.order:

2011-10-24  Geoffrey Garen  <ggaren@apple.com>

        Removed SharedUChar and tightened language around its previous uses
        https://bugs.webkit.org/show_bug.cgi?id=70698

        Reviewed by David Levin.

        - Removed SharedUChar because most of its functionality has moved into
        other abstraction layers, and we want remaining clients to choose their
        abstractions explicitly instead of relying on StringImpl to provide this
        behavior implicitly, since we think they can sometimes make more efficient
        choices.

        - Renamed "threadSafeCopy" and "crossThreadCopy" to "isolatedCopy" because
        the former names could give the impression that the resulting object was