@@ -1,3 +1,15 @@
+2011-10-25  Mark Hahnenberg  <mhahnenberg@apple.com>
+
+        Add getOwnPropertySlot to MethodTable
+        https://bugs.webkit.org/show_bug.cgi?id=69807
+
+        Reviewed by Oliver Hunt.
+
+        No new tests.
+
+        * bridge/runtime_method.h: Changed getOwnPropertySlot to be protected so 
+        subclasses can reference it in their MethodTables.
+
 2011-10-25  Simon Fraser  <simon.fraser@apple.com>
 
         REGRESSION (r88580): Cursor fails to change to pointer on embedded Google maps popups
