@@ -1,3 +1,15 @@
+2011-10-25  Mark Hahnenberg  <mhahnenberg@apple.com>
+
+        Add getOwnPropertySlot to MethodTable
+        https://bugs.webkit.org/show_bug.cgi?id=69807
+
+        Reviewed by Oliver Hunt.
+
+        * JavaScriptCore.exp:
+        * runtime/ClassInfo.h: Added both versions of getOwnPropertySlot to the MethodTable.
+        * runtime/JSCell.h: Changed getOwnPropertySlot to be protected so other classes can 
+        reference it in their MethodTables.
+
 2011-10-25  Oliver Hunt  <oliver@apple.com>
 
         Need to support marking of multiple nested codeblocks when compiling
